            - add button to quickly create excel export reports
          - Logcache:
            - fix importing logs from file (#751)
            - fix issue with locking
          - Panorama:
            - add squares widget
            - add user styles option to add generic styles usable in labels etc.
            - add optional helper grid
            - update extjs 4.2.2
            - fix moving watermark elements
            - fix widgets display issue in IE11
          - Mobile:
            - add config option to add additonal links on the home page

2.16-2   Sun Aug 20 13:47:31 CEST 2017
          - add json export to tac page
          - add workaround for displaying wrong host current_check_attempt
          - send commands in bulk of 100 each
          - Business Process:
            - change pre/post hooks arguments

2.16     Tue Aug  8 21:18:40 CEST 2017
          - xls exports: add column reordering
          - action menus: add close_timeout option
          - downtimes: verify if end date is after start date
          - support cascaded http backends with lmd
          - show lmd statistics to performance page
          - broadcasts:
            - show broadcasts optionally on the login page
            - add optional annotation icon
          - logcache:
            - performance improvements for the import and update commands
            - fix notifications filter by contact_name
          - cli:
            - cleanup cli module system
            - add plugin cli command
            - add bash completion
          - Business Process:
            - add input/output filter
            - make references link recursive
            - performance improvements for service status nodes
            - add optional operator for status aggregation
          - Panorama:
            - fix business process widget refresh (#702)
          - Config Tool:
            - fix removing too many backends (#743)