@@ -23,6 +23,7 @@ next:
             - add user styles option to add generic styles usable in labels etc.
             - add optional helper grid
             - update extjs 4.2.2
+            - add label availability options
             - fix moving watermark elements
             - fix widgets display issue in IE11
           - Mobile:
